--- a/Pipfile
+++ b/Pipfile
@@ -3,18 +3,14 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
-[dev-packages]
-flake8 = "*"
-black = "*"
-
 [packages]
-django = "==2.2.5"
+django = "*"
 pillow = "*"
 django-countries = "*"
 django-seed = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.9"
 
 [pipenv]
 allow_prereleases = true
